5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1806_2185.log
== TEST (2019-06-25 16:53:39) 
-- CODE:
from numpy import*
# Definicado quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
# Tipos de medalhas 
(no
. de 
colunas)
MEDALHAS = 
shape
(quadro)[1]
# 
Variavel
acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for j in range(MEDALHAS):
	total = total + quadro[3,j]
print(total)

-- ERROR:
File "XXXX", line 15
    colunas)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:54:02) 
-- CODE:
from numpy import*
# Definicado quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
# Tipos de medalhas(no. de colunas)
MEDALHAS = shape(quadro)[1]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for j in range(MEDALHAS):
	total = total + quadro[3,j]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:56:17) 
-- CODE:
from numpy import*
# Definicado quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
# Tipos de medalhas(no. de colunas)
MEDALHAS = shape(quadro)[1]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for j in range(MEDALHAS):
	total = total + quadro[3,j]
print(total)

for j in range (MEDALHAS):
	total = total + quadro[0,j]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:56:52) 
-- CODE:
from numpy import*
# Definicado quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
# Tipos de medalhas(no. de colunas)
MEDALHAS = shape(quadro)[1]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for j in range(MEDALHAS):
	total = total + quadro[3,j]
print(total)

for x in range (MEDALHAS):
	total = total + quadro[0,x]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:57:09) 
-- CODE:
from numpy import*
# Definicado quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
# Tipos de medalhas(no. de colunas)
MEDALHAS = shape(quadro)[1]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for j in range(MEDALHAS):
	total = total + quadro[0,j]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:57:38) 
-- CODE:
from numpy import*
# Definicado quadro de medalhas
quadro = array([
[46, 37, 38],
[27, 23, 17],
[26, 18, 26],
[19, 18, 19],
[17, 10, 15],
[12,  8, 21],
[10, 18, 14]
])
# Tipos de medalhas(no. de colunas)
MEDALHAS = shape(quadro)[1]
# Variavel acumuladora
total = 0
# Processa a j-esima coluna na linha 4
for j in range(MEDALHAS):
	total = total + quadro[6,j]
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
